<resources>
    <string name="app_name">Cafe</string>
    <string name="TextView_Hello">Добро пожаловать!</string>
    <string name="enter_name">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="Enter">Войти</string>
    <string name="coffe_break_cafe">Coffe Break cafe</string>
    <string name="Hello_user">Привет, %s! Что желаете?</string>
    <string name="Tea">Чай</string>
    <string name="Coffee">Кофе</string>
    <string name="adding">Что добавить в ваш %s?</string>
    <string name="sugar">Сахар</string>
    <string name="milk">Молоко</string>
    <string name="order">Сделать заказ</string>
    <string name="field_is_empty">Заполните все поля</string>
    <string name="lemon">Лимон</string>
    <string name="type_of_drinks">Выберите тип напитка</string>

    <array name="types_of_tea">
        <item>Зеленый</item>
        <item>Черный</item>
        <item>Красный</item>
        <item>Жасминовый</item>
        <item>Улун</item>
        <item>Матча</item>
    </array>

    <array name="types_of_coffee">
        <item>Латте</item>
        <item>Капучино</item>
        <item>Американо</item>
        <item>Раф</item>
    </array>

    <string name="text_View_Name">Имя:</string>
    <string name="drink">Напиток:</string>
    <string name="type_of_drink">Тип напитка:</string>
    <string name="addivies">Добавки:</string>


</resources>