<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:text="@string/text_View_Name"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:textSize="48sp" />

        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:text="@string/drink"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textViewDrink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:text="@string/type_of_drink"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textViewTypeOfDrinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:textSize="48sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:text="@string/addivies"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/textViewAddivies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24sp"
            android:textSize="48sp" />
    </LinearLayout>
</ScrollView>